--- a/style.css
+++ b/style.css
@@ -195,27 +195,87 @@ header img {
 /* ///////////////////////////////////////////////////////////////////////////////// */
 
 
-/* ///////////////////////////////////////////////////////////////////////////////// */
 /* about section */
-
 .aboutSection {
     display: flex;
     background-color: black;
     color: white;
-    border-radius: 20px;
-    width: 99%;
+    /* border-radius: 20px; */
+    /* width: 99%; */
     margin: auto;
     margin-top: 20px;
+    /* height: 300px; */
+}
+
+
+/* Body Section */
+.body article {
+    /* background-color: green; */
+}
+
+.body article img {
+    top: 0;
+    /* display: none; */
+}
+
+
+/* ///////////////////////////////////////////////////////////////////////////////// */
+/* aboutSection studySection */
+.aboutSection #studyGroupsSection {
+    background-color: red;
+    width: 100%;
+    padding: none;
+    /* display: flex; */
+    justify-content:space-around;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+/* .aboutSection #studyGroupsSection img {
+    width: 100%;
+} */
+
+
+
+
+
+
+
+.body {
+    display: flex;
+    /* background-color: black; */
+    color: white;
+    /* border-radius: 20px; */
+    /* width: 99%; */
+    margin: auto;
+    margin-top: 20px;
+    padding: 10px;
+    /* height: 300px; */
+}
+
+.body img {
+    width: 100%;
 }
 
 .aboutSection .left {
     padding: 30px;
-    height: 100%;
+    /* height: 100%; */
     flex: 1;
+    /* background-color: purple; */
+}
+
+.aboutSection .body {
+    padding: 0;
+}
+
+.body img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; 
 }
 
 .aboutSection .right {
-    padding: 30px;
+    /* padding: 30px; */
     flex: 2;
 }
 
@@ -321,7 +381,7 @@ header img {
 
 @media screen and (min-width: 1100px) {
 
-    .aboutSection {
+    .aboutSection, .body {
         width: 80%;
     }
 
@@ -354,11 +414,11 @@ article {
 
 #studyGroupsSection {
     width: 100%;
-    padding: 20px;
+    /* padding: 20px; */
     display: flex;
     justify-content:space-around;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-top: 20px; */
+    /* margin-bottom: 20px; */
     /* background-color: yellow; */
     /* display: none; */
 }
@@ -421,12 +481,11 @@ article .right h2 {
 
 
 
-
 .black {
     background-color: black;
     color: white;
     height: 100%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     width: 100%;
     font-size: 30px;
     padding: 20px;
@@ -443,20 +502,47 @@ article .right h2 {
 }
 
 .red {
-    background-color: rgba(255, 0, 0, 0.378);
+    background-color: rgba(255, 0, 0, 0.536);
     font-size: 20px;
     height: 100%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     width: 100%;
     font-size: 30px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: black;
 }
 @media screen and (max-width: 768px) {
 
-    article  {
+    .body {
+        padding: 0;
+    }
+
+    .body article {
+        flex-direction: column;
+        /* background-color: yellow; */
+    }
+
+    .body .right {
+        width: 100%;
+    }
+
+    .body .left {
+        width: 100%;
+    }
+
+    .body .image {
+        height: 100px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        /* transform: scale(0.8); */
+    }
+
+
+
+    /* article  {
         display: block;
     }
 
@@ -466,7 +552,6 @@ article .right h2 {
     }
 
     article .left {
-        /* background-color: red; */
         width: 90%;
         margin: auto;
         display: block;
@@ -490,8 +575,6 @@ article .right h2 {
 
     .temporary {
         margin: none;
-        /* background-color: green; */
-
         margin-top: 20px;
     }
 
@@ -538,7 +621,7 @@ article .right h2 {
 
     .temporary #makeMoney .right {
         padding-top: 0;
-    }
+    } */
 }
 
 /* ///////////////////////////////////////////////////////////////////////////////// */
