--- a/style.css
+++ b/style.css
@@ -223,9 +223,7 @@ header img {
 
 
 /* Body Section */
-.body article {
-    /* background-color: green; */
-}
+
 
 .body article img {
     top: 0;
@@ -481,7 +479,7 @@ article .right h2 {
     /* border-radius: 10px; */
     width: 100%;
     font-size: 30px;
-    padding: 20px;
+    /* padding: 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -492,20 +490,26 @@ article .right h2 {
 
 .black li {
     font-size: 20px;
+    list-style: none;
 }
 
 .red {
-    background-color: rgba(255, 0, 0, 0.536);
+    /* background-color: rgba(255, 0, 0, 0.536); */
+    background-color: black;
     font-size: 20px;
     height: 100%;
     /* border-radius: 10px; */
     width: 100%;
-    font-size: 30px;
-    padding: 20px;
+    font-size: 20px;
+    /* padding: 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: black;
+    color: white;
+}
+
+.red li {
+    list-style: none;
 }
 @media screen and (max-width: 768px) {
 
