--- a/style.css
+++ b/style.css
@@ -531,9 +531,9 @@ article .right h2 {
     }
 
     .body .image {
-        height: 100px;
-        margin-bottom: 20px;
-        margin-top: 20px;
+        height: 150px;
+        /* margin-bottom: 20px; */
+        /* margin-top: 20px; */
         /* transform: scale(0.8); */
     }
 
