--- a/style.css
+++ b/style.css
@@ -6,28 +6,34 @@ body {
 }
 
 .navbar {
-    background-color: rgb(255, 0, 0);
+    background-color: white;
     color: white;
 }
 
-.navbar-light .navbar-nav {
-    color: white;
+.navbar-nav li {
+    margin-top: 5px;
 }
+
 
 footer a {
     color: black;
 }
 
 footer a:hover {
-    color: red;
+    color: #469597;
 }
 
 .navbar a {
     color: white;
 }
 
+.nav-item a {
+    color: #01A79E;
+    margin-left: 8.5px;
+}
+
 .navbar-toggler {
-    background-color: white;
+    background-color: #09a9ac;
 }
 header img {
     width: 70px;
@@ -112,7 +118,8 @@ header img {
   .slide h1 {
     padding: 10px;
     border-radius: 10px;
-    background-color: black;
+    background-color: #E5E3E4;
+    color: #01A79E;
     font-size: 2em;
   }
 
@@ -212,8 +219,8 @@ header img {
 /* about section */
 .aboutSection {
     display: flex;
-    background-color: black;
-    color: white;
+    background-color: #BBC6C8;
+    /* color: white; */
     /* border-radius: 20px; */
     /* width: 99%; */
     margin: auto;
@@ -473,7 +480,7 @@ article .right h2 {
 
 
 .black {
-    background-color: black;
+    background-color: #038480;
     color: white;
     height: 100%;
     /* border-radius: 10px; */
@@ -494,7 +501,7 @@ article .right h2 {
 }
 
 .red {
-    background-color: black;
+    background-color: #C3AB85;
     /* background-color: white; */
     font-size: 20px;
     height: 100%;
@@ -505,7 +512,7 @@ article .right h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: white;
+    color: black;
 }
 
 
@@ -553,8 +560,8 @@ article .right h2 {
     }
 
     .black {
-        background-color: rgba(0, 0, 0, 0.166);
-        color: black;
+        background-color: #02B3AC;
+        color: white;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
     }
@@ -565,8 +572,8 @@ article .right h2 {
     }
 
     .red {
-        background-color: rgba(0, 0, 0, 0.166);
-        color: black;
+        background-color: #02B3AC;
+        color: white;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
     }
@@ -748,7 +755,7 @@ article .right h2 {
 footer {
     margin-top: 20px;
     /* background-image: url("./images/footer2.jpg"); */
-    background-color: black;
+    background-color: #01A79E;
     color: white;
     background-size: cover;
     background-position: center;
@@ -763,7 +770,7 @@ footer i {
 }
 
 footer i:hover {
-    color: red;
+    color: #00fbff;
 }
 
 footer .footerContent {
@@ -788,7 +795,22 @@ footer h2 {
     width: 80%;
     flex: 1;
     padding: 20px;
+    /* background-color: red; */
+    
 }
+
+.getIt div {
+    /* background-color: purple; */
+    width: 100%;
+}
+
+.downloadIcons {
+    /* background-color: pink; */
+    width: 100%;
+    display: flex;
+    line-height: 3;
+}
+
 
 footer li {
     list-style: none;
@@ -818,7 +840,7 @@ footer .google {
 }
 
 footer img {
-    width: 60%;
+    width: 90%;
     max-width: 200px;
     position:static;
     border-radius: 5px;
