fixing phone images

--- a/style.css
+++ b/style.css
@@ -285,6 +285,16 @@ header img {
     }
 }
 
+/* mobile dresponsiveness */
+@media screen and (max-width: 540px) {
+    .advertise .box img{
+        background-color: red;
+        width: 100%;
+        height: auto;
+    }
+}
+
+
 /* mobile responsiveness */
 @media screen and (max-width: 479px) {
     .images {
