--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body {
 /* header and navbar */
 
 .navbar {
-    /* background-color: white; */
-    background-color: red;
+    background-color: white;
     color: white;
 }
 
